# mir-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  USAGE.md  makefile  share.rs  tmux.sh
arrow-flight/: Cargo.toml
arrow-flight/src/: main.rs
arrow-flux/: Cargo.toml
arrow-generator/: Cargo.toml  Dockerfile  Dockerfile2  Makefile  gen.arrow
arrow-generator/data/: gen.arrow  gen.csv  gen.json  gen.parquet
arrow-generator/src/: main.rs
arrow/arrow-flight/src/: main.rs
arrow/arrow-generator/: Dockerfile  gen.parquet  gen.schema.json
arrow/arrow-generator/data/: gen.csv  gen.json
docs/: ADR-01_topics-layout.md  ADR-02.md  ADR-02_serialization-compression.md  ADR-03_payload.md  ADR-04_cache.md  ADR-05_webapi.md  ADR-06_questdb_schema.md  ADR-07_device_twin.md  ADR-08_data_store.md  ADR-09_routing_twin.md  ADR-10_architecture.drawio  ADR-11_connection_flow.md  ADR-12_restructure copy.md  ADR-12_restructure.md  ADR-13_cli.md  ADR-14_key-value-store.md  idea.md  questdb_grafana.md  rabbit.md  reference.md  roadmap.md
iot/: makefile
iot-ox/: Cargo.toml
iot-ox/scratch/: pass.md
iot-ox/src/: main.rs
iot-swarmer/: Cargo.toml
iot-swarmer/config/: swarmer.yaml
iot-swarmer/scratch/: device.rs.iter.old  main_enum.rs  main_trait.rs
iot-swarmer/src/: device.rs  main.rs
iot/iot-dizer/: Cargo.toml
iot/iot-flux/: Cargo.toml
iot/iot-flux/config/: flux.yaml
iot/iot-flux/src/: main.rs
iot/iot-oxi/: Cargo.toml
iot/iot-redox/: Cargo.toml
iot/iot-redox/config/: redox.yaml
iot/iot-redox/src/: api.rs  main.rs  twin_service.rs
iot/iot-redox/surrealdb/iot.db/: 000013.sst  000016.sst  000017.sst  000020.sst  IDENTITY  LOG  LOG.old.1683804680249364  LOG.old.1684888258352541  LOG.old.1684916554170174  LOG.old.1684919998656496  MANIFEST-000010  MANIFEST-000018  MANIFEST-000022
iot/iot-swarmer/: Cargo.toml
iot/iot-swarmer/config/: swarmer.yaml
iot/iot-swarmer/scratch/: device.rs.own.old  device_enum.rs
iot/iot-swarmer/src/: device.rs  main.rs
iot/surrealdb/iot.db/: IDENTITY  LOG
playground/: Cargo.toml
playground/src/: device.rs  main.rs
rabbitmq-rocket/: Makefile  Rocket.toml
rabbitmq-rocket/src/: main.rs
rabbitmq-warp/: Cargo.toml
rabbitmq-warp/scratch/: pass.md
rabbitmq-warp/src/: main.rs
rabbitmq/rabbitmq-rocket/: Cargo.toml
rabbitmq/rabbitmq-rocket/src/: main.rs
rocketdb-helloworld/: Cargo.toml
src/api/samples/create/device/: device.json
src/api/samples/delete/devices/: devices.json
src/api/samples/list/devices/: devices.json
src/api/samples/update/device/: device.json
src/cli/: Cargo.toml
src/cli/src/: create.rs  delete.rs  list.rs  listen.rs  main.rs  update.rs
src/cli/src/create/: device.rs
src/cli/src/delete/: device.rs
src/cli/src/list/: devices.rs
src/cli/src/update/: device.rs
src/dv-dizer/: Cargo.toml
src/dv-dizer/src/: main.rs
src/dv-oxi/: Cargo.toml
src/dv-oxi/src/: main.rs
src/iot-dizer/: Cargo.toml
src/iot-flux/: Cargo.toml  output.yaml
src/iot-flux/src/: main.rs
src/iot-redox/: Cargo.toml
src/iot-redox/config/: redox.yaml
src/iot-redox/src/: api.rs  main.rs  twin_service.rs
src/iot-swarmer/: Cargo.toml
src/iot-swarmer/config/: swarmer.yaml
src/iot-swarmer/src/: device.rs  main.rs
src/lib-dizer/: Cargo.toml
src/lib-dizer/src/: builder.rs  dizer.rs  error.rs  lib.rs
src/lib-oxi/: Cargo.toml
src/lib-oxi/src/: builder.rs  error.rs  lib.rs  oxi.rs
src/libs/: Cargo.toml
src/libs/src/: lib.rs
src/libs/src/clients/: amqp.rs  mod.rs
src/libs/src/models/: telemetry.rs
src/libs/src/shipyard/: mod.rs
src/libs/src/shipyard/oxi/: builder.rs  error.rs  oxi.rs
src/libs/src/utils/: config.rs  telemetry.rs
src/ui/: Cargo.toml
src/ui/src/: main.rs
src/ui/templates/: index.html
src/x/: Cargo.toml
src/x/src/: device_twin.rs  lib.rs  telemetry.rs
src/y/: Cargo.toml
src/y/src/: lib.rs
src/y/src/clients/: amqp.rs
src/y/src/models/: mod.rs
src/y/src/utils/: cli.rs  logger.rs  mod.rs  serialization.rs  telemetry.rs
surrealdb/iot.db/: IDENTITY  LOG  OPTIONS-000007
y/: Cargo.toml
y/src/: lib.rs
y/src/clients/: amqp.rs  mod.rs
y/src/models/: device.rs  device_twin.rs  mod.rs
y/src/utills/: config.rs  logger.rs  mod.rs  network.rs
