[package]
name = "iot-ox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.1.1"
deadpool = "0.9.5"
deadpool-lapin = "0.10.0"
tokio = { version = "1.27.0", features = ["macros", "time", "rt-multi-thread"] }
futures = { version = "0.3.28", default-features = true}
tokio-amqp = "2.0.0"
thiserror = "1.0.40"
warp = "0.3.4"
tokio-reactor-trait = "1.1.0"
