[package]
name = "y"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
lapin = "2.1.1"
deadpool = "0.9.5"
deadpool-lapin = "0.10.0"
tokio = { version = "1.27.0", features = ["macros", "time", "rt-multi-thread", "signal"] }
tokio-amqp = "2.0.0"
brotli = "3.3.4"