[package]
name = "mir"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to access to Mir ecosystem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }
clap = { version = "4.4.2", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1.27.0", features = [
  "macros",
  "time",
  "rt-multi-thread",
  "signal",
] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
string-builder = "0.2.0"
