[package]
name = "dv-dizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x = { path = "../x" }
y = { path = "../y" }
dizer = { path = "../lib-dizer" }
chrono = "0.4.26"
lapin = "2.1.1"
deadpool = "0.9.5"
deadpool-lapin = "0.10.0"
tokio = { version = "1.27.0", features = ["macros", "time", "rt-multi-thread", "signal"] }
futures = { version = "0.3.28", default-features = true}
tokio-amqp = "2.0.0"
thiserror = "1.0.40"
tokio-reactor-trait = "1.1.0"
brotli = "3.3.4"
lazy_static = "1.4.0"
serde = { version = "1.0.160", features = ["derive"] }
config = "0.13.3"
log = "0.4.17"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
tokio-util = "0.7.7"
serde_json = "1.0.96"
axum = "0.6.18"
rand = "0.8.5"
clap = { version = "4.3.12", features = ["derive", "cargo"] }