[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
libs = { path = "../libs" }
askama_axum = "0.4.0"
axum = "0.7.1"
config = "0.13.4"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.20"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
