[package]
name = "x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
futures = { version = "0.3.28", default-features = true}
surrealdb = "=1.0.0-beta.9"