[package]
name = "y"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
lapin = "2.1.1"
deadpool = "0.9.5"
deadpool-lapin = "0.10.0"
tokio = { version = "1.27.0", features = ["macros", "time", "rt-multi-thread", "signal"] }
tokio-amqp = "2.0.0"
brotli = "3.3.4"
thiserror = "1.0.40"
config_sys = { version = "0.13.3", package = "config" }
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.17"
chrono = "0.4.24"
serde_json = "1.0.96"
futures = { version = "0.3.28", default-features = true}
surrealdb = "=1.0.0-beta.11"
clap = { version = "4.3.12", features = ["derive", "cargo"] }